--- a/myStock/stock/templates/product.html
+++ b/myStock/stock/templates/product.html
@@ -76,14 +76,6 @@
 				<!-- Simple Datatable start -->
 				<div class="card-box mb-30">
 					{% load crispy_forms_tags %}
-					<div>
-						<form method="POST" action>
-							{% csrf_token %} {{ form.as_p }}
-							<button class="button is-success is-fullwidth is-medium mt-5"
-									type="submit">save
-							</button>
-						</form>
-					</div>
 					<div class="pd-20">
 						<h4 class="text-blue h4">List Of Products</h4>
 						<p  class="mb-0">You can add another >>> <a class="text-primary btn btn-success" style="color:white!important" data-toggle="modal" data-target="#AddProduct" type="button">Add New</a></p>
@@ -101,6 +93,17 @@
 							</thead>
 							<tbody>
 								<!-- view Product -->
+								
+								{% for Product in Products %}
+									<tr>
+										<td>{{ Product.productName }}</td>
+										<td>{{ Product.buyPrice }}</td>
+										<td>{{ Product.salePrice }}</td>
+										<td>{{ Product.quantity }}</td>
+										<td><a href="" style="color:blue;font-size:18">Edit</a></td>
+										
+									  </tr>
+								{% endfor %}
 							</tbody>
 						</table>
 					</div>
