--- a/myStock/stock/templates/customer.html
+++ b/myStock/stock/templates/customer.html
@@ -86,12 +86,21 @@
 									<th>Gender</th>
 									<th>Address</th>
 									<th>Phone</th>
-									<th>Status</th>
 									<th class="datatable-nosort">Action</th>
 								</tr>
 							</thead>
 							<tbody>
 								<!-- view Customer -->
+								{% for Customer in Customers %}
+									<tr>
+										<td>{{Customer.fname}} {{Customer.lname}}</td>
+										<td>{{Customer.gender}}</td>
+										<td>{{Customer.address}}</td>
+										<td>{{Customer.phone}}</td>
+										<td><a href="" style="color:blue;font-size:18">Edit</a></td>
+										
+									  </tr>
+								{% endfor %}
 							</tbody>
 						</table>
 					</div>
@@ -106,40 +115,36 @@
 									<h4 class="modal-title" style="color:#00f!important" id="myLargeModalLabel">Customer Registration</h4>
 									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 								</div>
-								<form method="post" action="customer.php">
+								<form method="post" action="">
+									{%csrf_token%}
 									<div class="modal-body">
 										<div class="form-group row">
 											<label class="col-sm-12 col-md-2 col-form-label">First Name: </label>
 											<div class="col-sm-12 col-md-10">
-												<input class="form-control" name="fname" type="text" placeholder="First Name Here" required>
+												{{formC.Fname}}
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-12 col-md-2 col-form-label">Last Name:</label>
 											<div class="col-sm-12 col-md-10">
-												<input class="form-control" name="lname" placeholder="Last Name Here" type="text" required>
+												{{formC.Lname}}
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-12 col-md-2 col-form-label">Gender:</label>
 											<div class="col-sm-12 col-md-10">
-												<select class="custom-select col-12" name="gender">
-													<option value="Male">Male</option>
-													<option value="Female">Female</option>
-												</select>
+												{{formC.gender}}
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-12 col-md-2 col-form-label">Address:</label>
 											<div class="col-sm-12 col-md-10">
-												<input class="form-control" name="address" placeholder="Address Here" type="text" required>
-											</div>
+												{{formC.address}}</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-12 col-md-2 col-form-label">Mobile:</label>
 											<div class="col-sm-12 col-md-10">
-												<input class="form-control" name="phone" type="tel" required>
-											</div>
+												{{formC.phone}}</div>
 										</div>
 									</div>
 									<div class="modal-footer">
